--- a/src/styles/blocks/_table.sass
+++ b/src/styles/blocks/_table.sass
@@ -19,6 +19,7 @@ $star-size: 24px
 
   &__header
     display: flex
+    justify-content: space-between
     align-items: center
     padding: 0 $gutter-width
     user-select: none
